# plugdata-ofelia

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  build.sh  bundle_libs.sh  install_libs.sh
.github/scripts/: clone-openFrameworks.sh  install-basic-libs.sh  install-libs.sh  linux-bundle-libs.sh  linux-install-libs.sh  macOS-sign-and-notarise.sh  package-macOS.sh  silent-apt.sh
.github/workflows/: build.yml  cmake.yml
Libraries/kiss/: kiss.sh
Resources/: build.bat  build.sh
Resources/Makefile/: Makefile  addons.make  config.make
Resources/VisualStudio/: ofelia.sln  ofelia.vcxproj  pd.vcxproj  pd.vcxproj.filters  pthreadVC3.vcxproj  pthreadVC3.vcxproj.filters
Resources/VisualStudio/pd.dir/Debug/pd.tlog/: pd.lastbuildstate
Resources/Xcode/: Project.xcconfig
Resources/Xcode/ofelia.xcodeproj/: project.pbxproj
Resources/Xcode/ofelia.xcodeproj/xcshareddata/xcschemes/: ofelia-multi.xcscheme  ofelia.xcscheme
Resources/ofelia/abs/: ofDraw.lua
Resources/ofelia/examples/3d/3dPrimitives/: main.pd
Resources/ofelia/examples/drawing/continuousLines/: main.pd
Resources/ofelia/examples/drawing/pattern/: main.pd
Resources/ofelia/examples/fbo/trails/: main.pd
Resources/ofelia/examples/image/loadDisplayImage/: main.pd
Resources/ofelia/examples/math/map/: main.pd
Resources/ofelia/examples/math/noiseWave/: main.pd
Resources/ofelia/examples/motion/brownian/: main.pd
Resources/ofelia/examples/motion/cubes/: main.pd  window_test.pd  window_test2.pd
Resources/ofelia/examples/pd/metro/: main.pd
Resources/ofelia/examples/pd/misc/: main.pd
Resources/ofelia/examples/shader/geometryShader/: geometryShader.lua
Resources/ofelia/examples/shader/glslSandbox/: main.pd
Resources/ofelia/examples/shape/star/: main.pd
Resources/ofelia/examples/simulate/simpleParticleSystem/: main.pd
Resources/ofelia/examples/text/drawFontString/: main.pd
Resources/ofelia/examples/video/asciiVideoExample/: asciiVideoExample.lua
Resources/ofelia/examples/video/videoGrabberExample/: main.pd
Resources/ofelia/libs/: libfmod.dylib
Resources/scripts/: create-binary-data.py  linux-bundle-libs.sh  linux-install-libs.sh
Source/Objects/: ofxOfeliaClient.cpp  ofxOfeliaClient.h  ofxOfeliaCreator.cpp  ofxOfeliaCreator.h  ofxOfeliaData.cpp  ofxOfeliaData.h  ofxOfeliaDefine.cpp  ofxOfeliaDefine.h  ofxOfeliaExists.cpp  ofxOfeliaExists.h  ofxOfeliaFunction.cpp  ofxOfeliaFunction.h  ofxOfeliaGet.cpp  ofxOfeliaGet.h  ofxOfeliaIO.cpp  ofxOfeliaIO.h  ofxOfeliaLua.h  ofxOfeliaMessageManager.h  ofxOfeliaSet.cpp  ofxOfeliaSet.h  ofxOfeliaSetup.cpp  ofxOfeliaSetup.h  ofxOfeliaSignal.cpp  ofxOfeliaSignal.h  ofxOfeliaStream.h  ofxOfeliaTextBuf.cpp  ofxOfeliaTextBuf.h
Source/Runner/: ofxOfeliaLog.cpp  ofxOfeliaLua.cpp  ofxOfeliaLua.h  ofxOfeliaMacOS.mm  ofxOfeliaMain.cpp  ofxOfeliaMessageManager.cpp  ofxOfeliaMessageManager.h  ofxOfeliaPdBindings.cpp  ofxOfeliaPdBindings.h  ofxOfeliaSignal.cpp  ofxOfeliaSignal.h  ofxOfeliaStream.h  ofxPdInterface.h
Source/Shared/: SocketCompat.cpp  SocketCompat.h  TcpSocket.cpp  TcpSocket.h  ofxOfeliaStream.cpp  ofxOfeliaStream.h
kiss/: kiss.sh
ofxOfelia/LinuxExternal/: Makefile  addons.make  config.make
ofxOfelia/WindowsExternal/: Makefile  config.make  ofelia.sln  ofelia.vcxproj  ofelia.vcxproj.filters  pd.vcxproj  pthreadVC3.vcxproj
ofxOfelia/libs/ofxLua/src/bindings/: glmBindings.cpp
ofxOfelia/libs/ofxPd/libs/libpd/: x_libpd_ofelia.cpp
ofxOfelia/macOSExternal/: Makefile  Project.xcconfig  addons.make  config.make
ofxOfelia/macOSExternal/ofelia.xcodeproj/: project.pbxproj
ofxOfelia/macOSExternal/ofelia.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ofxOfelia/macOSExternal/ofelia.xcodeproj/xcshareddata/xcschemes/: ofelia.xcscheme
ofxOfelia/macOSExternal/plugdata-ofelia/plugdata-ofelia.xcodeproj/: project.pbxproj
ofxOfelia/ofelia/examples/3d/3dPrimitives/: main.pd
ofxOfelia/ofelia/examples/3d/coloredCube/: main.pd
ofxOfelia/ofelia/examples/image/pointillism/: main.pd
ofxOfelia/ofelia/examples/image/transparency/: main.pd
ofxOfelia/ofelia/examples/input/keyboard/: main.pd
ofxOfelia/ofelia/examples/input/mouse2d/: main.pd
ofxOfelia/ofelia/examples/math/distance2d/: main.pd
ofxOfelia/ofelia/examples/motion/bounce/: main.pd
ofxOfelia/ofelia/examples/motion/cubes/: main.pd
ofxOfelia/ofelia/examples/shader/displacementMap/: displacementMap.lua
ofxOfelia/ofelia/examples/shader/glslSandbox/: main.pd
ofxOfelia/ofelia/examples/shader/simpleColorQuad/: simpleColorQuad.lua
ofxOfelia/ofelia/examples/shape/bezier/: main.pd
ofxOfelia/ofelia/examples/shape/polygon/: main.pd
ofxOfelia/src/: ofxOfeliaAsync.cpp  ofxOfeliaAsync.h  ofxOfeliaClient.cpp  ofxOfeliaClient.h  ofxOfeliaCreator.cpp  ofxOfeliaData.cpp  ofxOfeliaData.h  ofxOfeliaDefine.cpp  ofxOfeliaDefine.h  ofxOfeliaEvents.cpp  ofxOfeliaExists.cpp  ofxOfeliaGL.cpp  ofxOfeliaGet.cpp  ofxOfeliaIO.cpp  ofxOfeliaLog.cpp  ofxOfeliaLua.cpp  ofxOfeliaLua.h  ofxOfeliaMessageManager.cpp  ofxOfeliaMessageManager.h  ofxOfeliaPdBindings.cpp  ofxOfeliaPdBindings.h  ofxOfeliaSet.cpp  ofxOfeliaSetup.cpp  ofxOfeliaSetup.h  ofxOfeliaSignal.cpp  ofxOfeliaTextBuf.cpp  ofxOfeliaWeakReference.h
ofxOfelia/src/Objects/: ofxOfeliaClient.cpp  ofxOfeliaClient.h  ofxOfeliaCreator.cpp  ofxOfeliaData.h  ofxOfeliaExists.cpp  ofxOfeliaIO.h  ofxOfeliaLua.h  ofxOfeliaMessageManager.h  ofxOfeliaStream.h
ofxOfelia/src/Runner/: ofxOfeliaEvents.cpp  ofxOfeliaEvents.h  ofxOfeliaGL.cpp  ofxOfeliaLua.h  ofxOfeliaPdBindings.h  ofxOfeliaSignal.cpp
(+23 files in other folders)
